--- a/EduClass.Web/Views/Tests/ViewStudentsTest.cshtml
+++ b/EduClass.Web/Views/Tests/ViewStudentsTest.cshtml
@@ -1,4 +1,4 @@
-﻿@model IList<EduClass.Entities.Student>
+﻿@model IList<EduClass.Web.Infrastructure.ViewModels.ViewStudentsTestViewModel>
 
 @{
     ViewBag.Title = "Ver test de los estudiantes";
@@ -32,6 +32,7 @@
                             <th class="text-center">Id</th>
                             <th>Nombre</th>
                             <th>Usuario</th>
+                            <th>Correctas</th>
                             <th></th>
                         </tr>
                     </thead>
@@ -40,11 +41,12 @@
                             foreach (var item in Model)
                             {
                                 <tr>
-                                    <td class="text-center">@item.Id</td>
-                                    <td>@item.FirstName @item.LastName</td>
-                                    <td>@item.UserName</td>
+                                    <td class="text-center">@item.Student.Id</td>
+                                    <td>@item.Student.FirstName @item.Student.LastName</td>
+                                    <td>@item.Student.UserName</td>
+                                    <td>@item.ReponseCorrect / @test.Questions.Count</td>
                                     <td class="text-center">
-                                        <a href="@Url.Action("ViewResponsesStudent", new { idTest = test.Id, idStudent = item.Id })" title="" data-placement="top" data-toggle="tooltip" class="tooltips" type="button" data-original-title="Ver lista de preguntas">
+                                        <a href="@Url.Action("ViewResponsesStudent", new { idTest = test.Id, idStudent = item.Student.Id })" title="" data-placement="top" data-toggle="tooltip" class="tooltips" type="button" data-original-title="Ver lista de preguntas">
                                             <i class="fa fa-question" style="font-size: 18px"></i>
                                         </a>
                                     </td>
