--- a/EduClass.Web/Views/Users/ResetPasswordEmail.cshtml
+++ b/EduClass.Web/Views/Users/ResetPasswordEmail.cshtml
@@ -5,9 +5,9 @@
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
-
-    if(!(bool)ViewBag.Sended)
+    if (ViewBag.Sended == null)
     {
+        
         <div class="form-group mb10">
             <div class="input-group">
                 <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
@@ -19,16 +19,39 @@
                 <input type="submit" class="btn btn-primary" value="Resetear contraseña"/>
             </div>
         </div>
-                        
     }
     else
     {
-        <div class="form-group mb10">
-            <div class="alert alert-success">
-                <p>Te hemos enviado un correo electrónico para que resetees tu contraseña</p>
+        if (!(bool)ViewBag.Sended)
+        {
+            <div class="form-group mb10">
+                <div class="alert alert-danger">
+                    <p>El usuario no existe en el sistema.</p>
+                </div>
             </div>
-        </div>
+
+            <div class="form-group mb10">
+                <div class="input-group">
+                    <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
+                    <input type="email" class="form-control" name="email" placeholder="juan@ejemplo.com" value="" />
+                </div>
+            </div>
+            <div class="form-group mb10">
+                <div class="input-group">
+                    <input type="submit" class="btn btn-primary" value="Resetear contraseña" />
+                </div>
+            </div>
+        }
+        else
+        {
+            <div class="form-group mb10">
+                <div class="alert alert-success">
+                    <p>Te hemos enviado un correo electrónico para que resetees tu contraseña</p>
+                </div>
+            </div>
+        }
     }
+
 }
 
 
