--- a/EduClass.Web/Views/Tests/Create.cshtml
+++ b/EduClass.Web/Views/Tests/Create.cshtml
@@ -14,7 +14,7 @@
         <ul class="panel-options">
             <li><a><i class="fa fa-refresh"></i></a></li>
         </ul>
-        <h4 class="panel-title text-success">Crear una prueba diagnostica para los Alumnos </h4>
+        <h4 class="panel-title text-success">Crear una prueba diagnóstica para los alumnos </h4>
 
     </div>
     <div class="panel-body">
