--- a/EduClass.Web/Views/Tests/Edit.cshtml
+++ b/EduClass.Web/Views/Tests/Edit.cshtml
@@ -14,7 +14,7 @@
         <ul class="panel-options">
             <li><a><i class="fa fa-refresh"></i></a></li>
         </ul>
-        <h4 class="panel-title text-success">Editar prueba diagnostica</h4>
+        <h4 class="panel-title text-success">Editar prueba diagnóstica</h4>
 
     </div>
     <div class="panel-body">
