--- a/EduClass.Web/Views/Tests/Index.cshtml
+++ b/EduClass.Web/Views/Tests/Index.cshtml
@@ -23,7 +23,7 @@ else
             <div class="people-options clearfix">
 
                 <div class="btn-group pull-right people-pager">
-                    <a href="@Url.Action("Create")" class="btn btn-primary pull-right">Agregar prueba diagnositca</a>
+                    <a href="@Url.Action("Create")" class="btn btn-primary pull-right">Agregar prueba diagnóstica</a>
                 </div>
 
             </div><!-- people-options -->
