--- a/EduClass.Web/Views/Mail/SendEmail.cshtml
+++ b/EduClass.Web/Views/Mail/SendEmail.cshtml
@@ -4,13 +4,12 @@
     ViewBag.Title = "Enviar Mensaje";
 }
 
-<h2>Enviar un Mensaje</h2>
-<div class="panel panel-site-traffic col-md-8 col-md-offset-2">
+<div class="panel col-md-8 col-md-offset-2">
     <div class="panel-heading">
         <h4 class="panel-title text-success">Envia un mensaje a cualquier miembro del grupo</h4>
     </div>
     <div class="panel-body">
-        @using (Html.BeginForm())
+        @using (Html.BeginForm("SendEmail", "Mail", FormMethod.Post, new { id = "frmSendMail"}))
         {
             @Html.AntiForgeryToken()
 
@@ -22,14 +21,14 @@
                 <div class="form-group">
                     @Html.Label("Remitente", htmlAttributes: new { @class = "control-label col-md-2" })
                     <div class="col-md-10">
-                        @Html.Editor((string)ViewBag.FromUser, new { htmlAttributes = new { @class = "form-control", @Value= (string)ViewBag.FromUser, @readonly =""} })
+                        @Html.Editor((string)ViewBag.FromUser, new { htmlAttributes = new { @class = "form-control", @Value = (string)ViewBag.FromUser, @readonly = "" } })
                     </div>
                 </div>
 
                 <div class="form-group">
                     @Html.LabelFor(model => model.PersonIdTo, htmlAttributes: new { @class = "control-label col-md-2" })
                     <div class="col-md-10">
-                        @Html.ListBoxFor(model => model.PersonIdTo, (SelectList)ViewBag.PersonsTo, htmlAttributes: new { @class = "form-control", @Id = "ddlPersons",  @multiple = "multiple", @data_plugin = "select2" })
+                        @Html.ListBoxFor(model => model.PersonIdTo, (SelectList)ViewBag.PersonsTo, htmlAttributes: new { @class = "form-control", @Id = "ddlPersons", @multiple = "multiple", @data_plugin = "select2" })
                         @Html.ValidationMessageFor(model => model.PersonIdTo, "", new { @class = "text-danger" })
                     </div>
                 </div>
@@ -42,20 +41,18 @@
                         </div>
                     </div>
                     <div class="form-group">
-                        @Html.TextAreaFor(model => model.Description, htmlAttributes : new { @class = "form-control", @Id = "wysiwyg",  @placeholder = "Inserte contenido del mensaje", @rows="10" })
+                        @Html.TextAreaFor(model => model.Description, htmlAttributes: new { @class = "form-control", @Id = "wysiwyg", @placeholder = "Inserte contenido del mensaje", @rows = "10" })
                         @Html.ValidationMessageFor(model => model.Description, "", new { @class = "text-danger" })
                     </div>
                     <div class="form-group">
                         <div class="col-md-offset-5 col-lg-8">
-                            <input type="submit" value="Enviar" class="btn btn-success" />
+                            <input type="submit" value="Enviar" class="btn btn-primary pull-right" />
+                            <a href="@Url.Action("Index", new { type = "Enviados"})" class="btn btn-default-active pull-right mr10">Volver</a>
                         </div>
                     </div>
 
                 </div>
         }
-    </div>
-    <div>
-        @Html.ActionLink("Volver", "Index")
     </div>
 </div>
 @Scripts.Render("~/bundles/jquery")
@@ -90,6 +87,16 @@
                 fa: true,
                 "image": false,
                 "link": false
+            }
+        });
+
+        $('#frmSendMail').submit(function () {
+
+            if($('#wysiwyg').data("wysihtml5").editor.getValue() == ""){
+
+                if (!confirm("¿Está seguro de enviar el mensaje vacio?")) {
+                    event.preventDefault();
+                }
             }
         });
 
