--- a/EduClass.Web/Views/Pages/Index.cshtml
+++ b/EduClass.Web/Views/Pages/Index.cshtml
@@ -3,7 +3,7 @@
 @using EduClass.Entities
 
 @{
-    ViewBag.Title = "Páginas Publicas";
+    ViewBag.Title = "Páginas Públicas";
 }
 
 <div class="panel">
@@ -11,6 +11,9 @@
         <h4 class="panel-title">Páginas públicas</h4>
     </div>
     <div class="panel-body">
+        @if (Model.Count() > 0)
+        {
+           
         <div class="row">
             <div class="col-md-12">
                 @if (UserSession.GetCurrentUser() is Teacher)
@@ -92,6 +95,13 @@
                 </div>
             </div><!-- col-sm-3 -->
         </div>
+        }
+        else
+        {
+            <div class="alert alert-warning">
+                No hay páginas disponibles.
+            </div>
+        }
     </div><!-- col-sm-3 -->
 </div>
 
