Correciones del archivo "Cosas que no andan..."

--- a/EduClass.Web/Views/FilesLibrary/Index.cshtml
+++ b/EduClass.Web/Views/FilesLibrary/Index.cshtml
@@ -110,7 +110,7 @@
                         }
 
                         </div>
-                        <h5 class="fm-title"><a href="">@elemento.Name</a></h5>
+                        <h5 class="fm-title"><a href="@Url.Content(elemento.UrlFile)" target="_blank">@elemento.Name</a></h5>
                         <small class="text-muted">Subido: @elemento.CreatedAt</small>
                     </div><!-- thmb -->
                 </div><!-- col-xs-6 -->
