Webapi - Implementado metodo para resetear contraseña.

--- a/EduClass.WebApi/Views/UserMailer/Welcome.cshtml
+++ b/EduClass.WebApi/Views/UserMailer/Welcome.cshtml
@@ -1,6 +1,6 @@
 @using System.Configuration;
 @{
-    var server = ConfigurationManager.AppSettings["UrlServer"] + "/Users/EnableByMail?key=";
+    var server = ConfigurationManager.AppSettings["UrlServer"] + "/Users/EnableByMail?person=";
 }
 
 <p>Su ususario ha sido creado correctamente</p>
