--- a/EduClass.WebApi/Views/UserMailer/PasswordReset.cshtml
+++ b/EduClass.WebApi/Views/UserMailer/PasswordReset.cshtml
@@ -1,5 +1,10 @@
 
-<p>Su contraseña esta lista para ser reseteada</p>
-<p>Haga click en el siguiente Link para completar el resteo.</p>
+<h2>Hemos reseteado tu contraseña</h2>
+<h4>Tu nueva contraseña es: @ViewBag.NewPassword</h4>
 
-<a href="@ViewBag.UrlReset">@ViewBag.UrlReset</a>
+
+<p>Te recordamos que luego de iniciar sesión cambies tu contraseña</p>
+
+<p>Atte.</p>
+<p>EduClass.Team</p>
+
