--- a/EduClass.Web/Views/Groups/JoinStudent.cshtml
+++ b/EduClass.Web/Views/Groups/JoinStudent.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "Unirse Grupo";
 }
 
-<div class="panel panel-site-traffic col-md-8 col-md-offset-2">
+<div class="panel panel-site-traffic col-md-6 col-md-offset-3">
     <div class="panel-heading">
         
         <h4 class="panel-title text-success">Unirse a un grupo mediante una clave</h4>
@@ -26,15 +26,13 @@
                 </div>
 
                 <div class="form-group">
-                    <div class="col-md-offset-6 col-md-10">
-                        <input type="submit" value="Unirse" class="btn btn-success" />
+                    <div class="col-md-offset-2 col-md-10">
+                        <input type="submit" value="Ingresar al grupo" class="btn btn-primary pull-right" />
+                        <a href="@Url.Action("Index")" class="btn btn-default-active pull-right mr10">Volver</a>
                     </div>
                 </div>
             </div>
         }
-        </div>
-        <div>
-            @Html.ActionLink("Volver", "Index")
         </div>
 
     </div>
