--- a/EduClass.Web/Views/FilesLibrary/Index.cshtml
+++ b/EduClass.Web/Views/FilesLibrary/Index.cshtml
@@ -111,7 +111,7 @@
 
                         </div>
                         <h5 class="fm-title"><a href="@Url.Content(elemento.UrlFile)" target="_blank">@elemento.Name</a></h5>
-                        <small class="text-muted">Subido: @elemento.CreatedAt</small>
+                        <small class="text-muted">Subido: @elemento.CreatedAt.ToString("dd/MM/yyyy hh:mm")</small>
                     </div><!-- thmb -->
                 </div><!-- col-xs-6 -->
             }
