--- a/EduClass.Web/Views/Mail/Index.cshtml
+++ b/EduClass.Web/Views/Mail/Index.cshtml
@@ -62,7 +62,7 @@
                                 
                             </div>
                             <div class="media-body">
-                                <span class="pull-right">@elemento.CreateAt</span>
+                                <span class="pull-right">@elemento.CreateAt.ToString("dd/MM/yyyy hh:mm:ss")</span>
                                 <h5 class="media-heading">@elemento.PersonFrom.FirstName</h5>
                                 <h5>@elemento.Subject</h5>
                             </div>
