--- a/EduClass.Web/Views/Groups/Edit.cshtml
+++ b/EduClass.Web/Views/Groups/Edit.cshtml
@@ -73,20 +73,34 @@
                         {
                             @Html.AntiForgeryToken()
                         
-                        <select id="select6" name="select6" class="form-control" style="width: 100%" data-plugin = "select2" data-placeholder="Ingrese los mails" multiple>
-                        </select>
-                        
-                        <div class="modal-body">
-                            <h2>CLAVE: @Model.Key</h2>
-                        </div>
-                        <div class="modal-footer">
-                            <button type="button" class="btn btn-default" data-dismiss="modal">Cerrar</button>
-                            
-                                
-                                <input type="hidden" name="groupId" value="@Model.Id" />
-                                <button type="submit" class="btn btn-primary">Enviar Mail</button>
-                            
-                        </div>
+                                                        
+                            <div class="modal-body">
+                                 <!--select id="select6" name="select6" class="form-control" style="width: 100%" data-plugin = "select2" data-placeholder="Ingrese los mails" multiple>
+                                </!--select>-->
+                                <div class="row">
+                                    <div class="col-md-12">
+                                        <input type="text" id="select6" name="select6" class="form-control" data-placeholder="Ingrese los mails" />
+                                    </div>
+                                </div>
+
+                                <div class="row">
+                                    <div class="col-md-12">
+                                        <span>Ingresa los mails separados por una coma (,)</span>
+                                    </div>
+                                </div>
+
+                                <div class="row">
+                                    <div class="col-md-12">
+                                        <h2>CLAVE: @Model.Key</h2>
+                                    </div>
+                                </div>
+
+                            </div>
+                            <div class="modal-footer">
+                                <button type="button" class="btn btn-default" data-dismiss="modal">Cerrar</button>
+                                    <input type="hidden" name="groupId" value="@Model.Id" />
+                                    <button type="submit" class="btn btn-primary">Enviar Mail</button>
+                            </div>
                         }
                     </div><!-- modal-content -->
                 </div><!-- modal-dialog -->
@@ -113,10 +127,10 @@
 {
     @Scripts.Render("~/bundles/jqueryval")
     <script type="text/javascript">
-        $("#select6").select2({
+        /*$("#select6").select2({
             tags: true,
             tokenSeparators: [',', ' ', '\t']
-        });
+        });*/
 
         // HTML5 WYSIWYG Editor
         $('#wysiwyg').wysihtml5({
